--- a/examples/with-docker/build.yml
+++ b/examples/with-docker/build.yml
@@ -18,17 +18,17 @@
     - name: Clone the repository
       git:
         repo: 'https://github.com/HaithamAmireh/next.js'
-        dest: /tmp/
+        dest: ~
         version: main  # Change to your desired branch/tag
 
     - name: Build Docker image
       docker_image:
-        path: /tmp/examples/with-docer
+        path: ~/next.js/examples/with-docer
         name: next-sema
         tag: latest
         state: present
 
     - name: Remove the cloned repository
       file:
-        path: /tmp/next.js
+        path: ~/next.js
         state: absent
